infra/k8s/istio/services/argocd.yaml
# It feels dirty to have this as part of a different application deployment,
# but the services depend on Istio being present, so for now this is fine.

# ArgoCD virtual service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-svc
  namespace: argocd
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/https-in-gw
  http:
  - match:
    - uri:
        prefix: /argocd
    route:
    - destination:
        port:
          number: 443
        host: argocd-server.argocd.svc.cluster.local
