infra/k8s/istio/services/policies.yaml
# It feels dirty to have this as part of a different application deployment,
# but the services depend on Istio being present, so for now this is fine.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: argocd-allow-internal
  namespace: argocd
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["argocd", "istio-ingress"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-non-mtls
  namespace: argocd
spec:
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals: ["*"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: home-allow-ingress
  namespace: home
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-ingress"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: media-allow-ingress
  namespace: media
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-ingress"]
